--- a/client/public/css/buttons.css
+++ b/client/public/css/buttons.css
@@ -114,3 +114,37 @@ button {
 button:active {
   background-color: var(--btnActive);
 }
+.btn-password {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  width: 30px;
+  height: 30px;
+  border-radius: 200px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border: 1px solid var(--bgActionBar);
+  background-size: cover;
+  transition: all 0.5s ease;
+}
+.btn-password svg {
+  width: 100%;
+  height: 100%;
+}
+.btn-admin-more {
+  position: fixed;
+  z-index: 2;
+  bottom: 100px;
+  right: 50px;
+  width: 50px;
+  height: 50px;
+  border-radius: 200px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+  /* border: 2px solid var(--bgActionBar);*/
+  background-size: cover;
+  transition: all 1.0s ease;
+  transform: translateY(100px);
+}
+.btn-admin-more svg {
+  width: 100%;
+  height: 100%;
+}
