--- a/client/public/css/buttons.css
+++ b/client/public/css/buttons.css
@@ -131,18 +131,17 @@ button:active {
   height: 100%;
 }
 .btn-admin-more {
-  position: fixed;
+  position: relative;
+  /* margin: 0!important;*/
+  left: 0;
   z-index: 2;
-  bottom: 100px;
-  right: 50px;
   width: 50px;
   height: 50px;
   border-radius: 200px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+  transition: all 0.3s ease;
   /* border: 2px solid var(--bgActionBar);*/
   background-size: cover;
-  transition: all 1.0s ease;
-  transform: translateY(100px);
 }
 .btn-admin-more svg {
   width: 100%;
