--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -7,10 +7,22 @@ html, body {
   overflow-x: hidden;
   transition: background 0.2s ease;
   top: 0 !important;
+  scrollbar-width: none;
+  scrollbar-track-piece: none;
+  scrollbar-thumb: none;
+  -webkit-scrollbar-width: thin;
+  -webkit-scrollbar-track-piece: none;
+  -webkit-scrollbar-thumb: none;
 }
 * {
   margin: 0;
   padding: 0;
+  scrollbar-width: none;
+  scrollbar-track-piece: none;
+  scrollbar-thumb: none;
+  -webkit-scrollbar-width: thin;
+  -webkit-scrollbar-track-piece: none;
+  -webkit-scrollbar-thumb: none;
 }
 .action-bar {
   display: flex;
@@ -473,4 +485,67 @@ html, body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+.content-tools-admin {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  position: fixed;
+  bottom: 100px;
+  right: 50px;
+  transition: all 1.0s ease;
+  transform: translateY(100px);
+}
+.content-tools-admin .item {
+  display: flex;
+  position: relative;
+  margin-bottom: 10px;
+  margin-right: 2px;
+  transform: translateY(calc(100% + 15px));
+}
+.content-tools-admin .item::before {
+  opacity: 0;
+  transform: translateX(50px);
+  position: absolute;
+  content: attr(text);
+  left: -90px;
+  top: 8px;
+  background: var(--bgActionBar);
+  border-radius: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  transition: all 0.1s ease;
+}
+.content-tools-admin .item.active::before {
+  opacity: 1;
+  transform: translateX(0);
+}
+.content-add-user {
+  top: 0;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  backdrop-filter: blur(3px);
+  z-index: 4;
+  /*flex-direction: column;*/
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  /* vertical-align: middle;*/
+  /*flex-wrap: wrap;*/
+  transition: all 0.5s ease;
+  transform: translateY(100vh);
+}
+.content-item-add-user {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  /*flex-grow: 0;*/
+  margin-left: 15px;
+  margin-right: 15px;
+  border-radius: 20px;
+  padding: 10px;
+  /*  flex-shrink: 1;*/
+  background: var(--bgActionBar);
 }
